--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ requires-python = ">=3.10"
 dependencies = [
     "opencv-python == 4.7.0.72",
     "numpy == 1.24.2",
-    "pytube == 15.0.0"
+    "streamlit == 1.39.0",
+    "streamlit-drawable-canvas == 0.9.3",
+    "fastapi == 0.115.0"
 ]
 
 [project.scripts]
